--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
         </activity>
         <activity android:name=".SearchActivity"
                     android:theme="@style/AppTheme">
-
+        </activity>
+        <activity android:name=".SearchResultActivity"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
