검색결과를 다음 액티비티로 넘기기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity android:name=".SearchResultActivity"
             android:theme="@style/AppTheme">
         </activity>
+        <activity android:name=".PlaceViewActivity"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
