--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <activity android:name=".PlaceViewActivity"
             android:theme="@style/AppTheme">
         </activity>
+        <activity android:name=".PathMakeActivity"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
