택시 프래그먼트 기능 구현 완료. 마지막 액티비티인 경로 상세보기 액티비티 DetailActivity 작업 시작

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity android:name=".PathMakeActivity"
             android:theme="@style/AppTheme">
         </activity>
+        <activity android:name=".DetailActivity"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
